--- a/style.css
+++ b/style.css
@@ -1,66 +1,65 @@
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background: cyan;
-    background-image: url('https://source.unsplash.com/1600x900/?landscape');
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background: cyan;
+  background-image: url("https://static.vecteezy.com/system/resources/previews/019/765/478/non_2x/world-map-with-country-location-free-vector.jpg");
 }
 
 .card {
-    width: 100%;
-    background: #000000d0;
-    color: white;
-    padding: 1em;
-    border-radius: 30px;
-    max-width: 600px;
-    margin: 1em;
+  width: 100%;
+  background: #000000d0;
+  color: white;
+  padding: 1em;
+  border-radius: 30px;
+  max-width: 600px;
+  margin: 1em;
 }
-.search{
-        display: flex;
-        align-items: center;
-        justify-content: center;       
+.search {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 input[type="text"] {
-    outline: none;
-    padding: 8px;
-    border-radius: 18px;
-    background: #7c7c7c2b;
-    margin: 8px;
-    border: none;
-    color: white;
-    font-size: 120%;
+  outline: none;
+  padding: 8px;
+  border-radius: 18px;
+  background: #7c7c7c2b;
+  margin: 8px;
+  border: none;
+  color: white;
+  font-size: 120%;
 }
 h1.temp {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 button {
-    padding-top: 5px;
-    margin-left: 4px;
-    border-radius: 50%;
-    height: 35px;
-    width: 35px;
-    background: grey;
-    border: none;
-    cursor: pointer;
-    transition: 0.2s ease-in-out;
+  padding-top: 5px;
+  margin-left: 4px;
+  border-radius: 50%;
+  height: 35px;
+  width: 35px;
+  background: grey;
+  border: none;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
 }
 
 button:hover {
-    background: white;
+  background: white;
 }
-.weather
-{
-    padding-left: 25px;
+.weather {
+  padding-left: 25px;
 }
 h3.description {
-    margin: 0px;
-    text-transform: capitalize;
+  margin: 0px;
+  text-transform: capitalize;
 }
-.flex{
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
+.flex {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
 }
